# pvlog

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  .redocly.yaml  .stylelintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  components.json  deny.toml  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  rustfmt.toml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml
assets/equipment-catalog/: OPEN_PV_MODULE_DATABASE.md  catalog-v1.json  catalog-v1.schema.json  equipment-catalog-definitions-v1.schema.json  inverter-catalog-v1.json  inverter-catalog-v1.schema.json  pv-module-catalog-v1.schema.json
deploy/compose/: .env.example  README.md  compose.yaml
docs/: README.md  claude-design-integration.md
docs/agents/: agent-rust-builds.md  backend-auth-provider-neutrality.md  compose-env.md  frontend-aesthetics.md  frontend-architecture.md  frontend-code-quality.md  frontend-data-telemetry.md  frontend-design-system.md  frontend-i18n-accessibility.md
docs/architecture/: telemetry-segment-format.md
docs/compatibility/: pvoutput-r2-matrix.md
docs/examples/: webhook-consumer.mjs
docs/guides/: developer-quickstarts.md  equipment-catalog.md  local-authentication-rbac.md  operator-recovery.md  pv-yield-forecasting.md  sbfspot-push-service.md  uploader-integration.md
docs/operations/: capacity-report.md
docs/reference/: api-domain-reference.md  pv-yield-model-v1.md
docs/release/: 0.1.0.md
embedded-ui/: index.html
openapi/: pvlog-v1.yaml
openspec/: config.yaml
release/: checksums.txt  pvlog-0.1.0.spdx.json
scripts/: import-open-pv-module-database.mjs  validate-equipment-catalogs.mjs
src/crates/api/: Cargo.toml
src/crates/api/src/: administration.rs  analytics.rs  api_keys.rs  audit.rs  authentication.rs  authorization.rs  community.rs  connectors.rs  dashboard.rs  equipment_catalog.rs  forecasting.rs  geocoding.rs  identities.rs  inverters.rs  lib.rs  local_password.rs  managed_resources.rs  notifications.rs  problem.rs  rbac.rs  readiness.rs  reporting.rs  sessions.rs  systems.rs  teams.rs  telemetry.rs  user_lifecycle.rs
src/crates/application/: Cargo.toml
src/crates/application/src/: alert_evaluator.rs  alert_rules.rs  analytics_api.rs  api_token.rs  authorization_boundary.rs  batch_ingestion.rs  browser_session.rs  community_catalog.rs  comparison.rs  data_quality.rs  equipment_catalog.rs  equipment_configuration.rs  identity_linking.rs  import_export.rs  ingestion_admission.rs  ingestion_normalization.rs  ingestion_validation.rs  legacy_credential.rs  lib.rs  local_password.rs  managed_resource.rs  modern_telemetry.rs  oauth2_connector.rs  observation_correction.rs  oidc.rs  pagination.rs  ports.rs  provider_data.rs  query_planner.rs  rate_limit.rs  rbac_management.rs  series_query.rs  statistics.rs  system_configuration.rs  system_lifecycle.rs  teams.rs  user_lifecycle.rs  weather_adapter.rs  webhook_delivery.rs  webhook_security.rs  (+1 more)
src/crates/compatibility/: Cargo.toml
src/crates/compatibility/src/: add_batch_status.rs  add_output.rs  add_status.rs  community.rs  legacy_notifications.rs  legacy_providers.rs  legacy_teams.rs  lib.rs  outputs.rs  protocol.rs  queries.rs
src/crates/domain/: Cargo.toml
src/crates/domain/src/: equipment_catalog.rs  forecasting.rs  identifiers.rs  identity.rs  lib.rs  measurements.rs  operations.rs  rbac.rs  shared.rs  systems.rs  telemetry.rs  time.rs  validation.rs  yield_model.rs
src/crates/pvlog/: Cargo.toml
src/crates/pvlog/src/: administration.rs  api_keys.rs  authentication.rs  config.rs  embedded_ui.rs  geocoding.rs  inverters.rs  lib.rs  main.rs  notifications.rs  operator_bundle.rs  reporting.rs
src/crates/sbfspot-push/: Cargo.toml
src/crates/sbfspot-push/src/: checkpoint.rs  client.rs  lib.rs  main.rs  source.rs
src/crates/storage/: Cargo.toml
src/crates/storage/migrations/postgres/: 0001_initialize_schema.sql  0002_telemetry_storage.sql  0003_management_and_account_schemas.sql  0004_time_partitions.sql  0005_system_registry.sql  0006_inverter_string_aggregate.sql  0007_equipment_catalog_snapshots.sql  0008_system_ingestion_keys.sql  0009_pv_yield_forecasting.sql  0010_remove_system_ingestion_keys.sql
src/crates/storage/migrations/sqlite-account/: 0001_initialize_schema.sql  0002_bind_account_identity.sql  0003_system_configuration_and_operations.sql  0004_telemetry_storage.sql  0005_projection_outbox.sql  0006_inverter_string_aggregate.sql  0007_equipment_catalog_snapshots.sql  0008_pv_yield_forecasting.sql
src/crates/storage/migrations/sqlite-management/: 0001_initialize_schema.sql  0002_identity_access_and_routing.sql  0003_projection_inbox.sql  0004_community_projections.sql  0005_rbac_assignment_uniqueness.sql  0006_system_registry.sql  0007_system_ingestion_keys.sql  0008_remove_system_ingestion_keys.sql
src/crates/storage/proto/: telemetry_segment_v1.proto
src/crates/storage/src/: account_repository.rs  administration_repository.rs  browser_session_repository.rs  compaction.rs  external_identity_repository.rs  integrity_planner.rs  job_dispatch.rs  lib.rs  management_repository.rs  merged_reader.rs  migrations.rs  operational_repository.rs  overlay_folding.rs  provisioning.rs  rbac_repository.rs  rollup_builder.rs  segment_codec.rs  sqlite_projection.rs  sqlite_router.rs  summary_rebuild.rs  system_lifecycle_repository.rs  telemetry_repository.rs  user_lifecycle_repository.rs  yield_forecast_repository.rs  yield_result_repository.rs
src/crates/worker/: Cargo.toml
src/crates/worker/src/: lib.rs
src/ui/: index.css  index.html  main.tsx
tests/compatibility/: README.md  add_batch_status.rs  add_output.rs  add_status.rs  conformance-contract.mjs  inventory-contract.mjs  legacy_community.rs  legacy_notifications.rs  legacy_outputs.rs  (+4 more)
tests/rust/config/: Cargo.toml  runtime_config.rs
tests/support/rust/application-fakes/: Cargo.toml
tests/support/rust/application-fakes/src/: lib.rs
(+432 files in other folders)
