[package]
name = "pvlog-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
garde.workspace = true
pvlog-application = { path = "../application" }
pvlog-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true
