[package]
name = "pvlog-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
opentelemetry.workspace = true
garde.workspace = true
pvlog-application = { path = "../application" }
pvlog-domain = { path = "../domain" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true

[lib]
path = "src/lib.rs"

[[test]]
name = "user-lifecycle-endpoints"
path = "../../../tests/rust/api/user_lifecycle_endpoints.rs"

[[test]]
name = "http-foundation"
path = "../../../tests/rust/api/http_foundation.rs"

[[test]]
name = "authentication"
path = "../../../tests/rust/api/authentication.rs"

[[test]]
name = "session-endpoints"
path = "../../../tests/rust/api/session_endpoints.rs"

[[test]]
name = "audit-endpoints"
path = "../../../tests/rust/api/audit_endpoints.rs"

[[test]]
name = "rbac-endpoints"
path = "../../../tests/rust/api/rbac_endpoints.rs"

[[test]]
name = "identity-endpoints"
path = "../../../tests/rust/api/identity_endpoints.rs"

[[test]]
name = "connector-admin-endpoints"
path = "../../../tests/rust/api/connector_admin_endpoints.rs"

[[test]]
name = "readiness-endpoints"
path = "../../../tests/rust/api/readiness_endpoints.rs"

[[test]]
name = "dashboard-endpoints"
path = "../../../tests/rust/api/dashboard_endpoints.rs"

[[test]]
name = "equipment-catalog-endpoints"
path = "../../../tests/rust/api/equipment_catalog_endpoints.rs"

[[test]]
name = "system-endpoints"
path = "../../../tests/rust/api/system_endpoints.rs"

[[test]]
name = "managed-resource-endpoints"
path = "../../../tests/rust/api/managed_resource_endpoints.rs"

[[test]]
name = "telemetry-endpoints"
path = "../../../tests/rust/api/telemetry_endpoints.rs"

[[test]]
name = "analytics-endpoints"
path = "../../../tests/rust/api/analytics_endpoints.rs"

[[test]]
name = "forecast-endpoints"
path = "../../../tests/rust/api/forecast_endpoints.rs"

[[test]]
name = "notification-endpoints"
path = "../../../tests/rust/api/notification_endpoints.rs"

[lints]
workspace = true
