[package]
name = "pvlog-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
argon2.workspace = true
async-trait.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
chrono-tz.workspace = true
openidconnect.workspace = true
oauth2.workspace = true
pvlog-domain = { path = "../domain" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[lib]
path = "src/lib.rs"

[dev-dependencies]
axum.workspace = true
chrono.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[test]]
name = "oidc-protocol"
path = "../../../tests/rust/application/oidc_protocol.rs"

[[test]]
name = "oauth2-protocol"
path = "../../../tests/rust/application/oauth2_protocol.rs"

[[test]]
name = "identity-linking"
path = "../../../tests/rust/application/identity_linking.rs"

[[test]]
name = "browser-session"
path = "../../../tests/rust/application/browser_session.rs"

[[test]]
name = "api-token"
path = "../../../tests/rust/application/api_token.rs"

[[test]]
name = "legacy-credential"
path = "../../../tests/rust/application/legacy_credential.rs"

[[test]]
name = "authorization-boundary"
path = "../../../tests/rust/application/authorization_boundary.rs"

[[test]]
name = "rate-limit"
path = "../../../tests/rust/application/rate_limit.rs"

[[test]]
name = "system-lifecycle"
path = "../../../tests/rust/application/system_lifecycle.rs"

[[test]]
name = "system-configuration"
path = "../../../tests/rust/application/system_configuration.rs"

[[test]]
name = "pagination"
path = "../../../tests/rust/application/pagination.rs"

[[test]]
name = "import-export"
path = "../../../tests/rust/application/import_export.rs"

[[test]]
name = "ingestion-normalization"
path = "../../../tests/rust/application/ingestion_normalization.rs"

[[test]]
name = "ingestion-validation"
path = "../../../tests/rust/application/ingestion_validation.rs"

[[test]]
name = "batch-ingestion"
path = "../../../tests/rust/application/batch_ingestion.rs"

[[test]]
name = "observation-correction"
path = "../../../tests/rust/application/observation_correction.rs"

[[test]]
name = "ingestion-admission"
path = "../../../tests/rust/application/ingestion_admission.rs"

[[test]]
name = "query-planner"
path = "../../../tests/rust/application/query_planner.rs"

[[test]]
name = "series-query"
path = "../../../tests/rust/application/series_query.rs"

[[test]]
name = "statistics"
path = "../../../tests/rust/application/statistics.rs"

[[test]]
name = "data-quality"
path = "../../../tests/rust/application/data_quality.rs"

[[test]]
name = "comparison"
path = "../../../tests/rust/application/comparison.rs"

[lints]
workspace = true
