[package]
name = "pvlog-compatibility"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono-tz.workspace = true
pvlog-application = { path = "../application" }
pvlog-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
pvlog-api = { path = "../api" }
tokio.workspace = true
tower.workspace = true

[[test]]
name = "legacy-protocol"
path = "../../../tests/compatibility/legacy_protocol.rs"

[[test]]
name = "add-output"
path = "../../../tests/compatibility/add_output.rs"

[[test]]
name = "add-status"
path = "../../../tests/compatibility/add_status.rs"

[[test]]
name = "add-batch-status"
path = "../../../tests/compatibility/add_batch_status.rs"

[[test]]
name = "legacy-queries"
path = "../../../tests/compatibility/legacy_queries.rs"

[[test]]
name = "legacy-outputs"
path = "../../../tests/compatibility/legacy_outputs.rs"

[[test]]
name = "uploader-convergence"
path = "../../../tests/e2e/uploader_convergence.rs"

[[test]]
name = "legacy-community"
path = "../../../tests/compatibility/legacy_community.rs"

[[test]]
name = "legacy-teams"
path = "../../../tests/compatibility/legacy_teams.rs"

[[test]]
name = "legacy-providers"
path = "../../../tests/compatibility/legacy_providers.rs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
