[package]
name = "pvlog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["postgres", "sqlite"]
postgres = ["pvlog-storage/postgres", "pvlog-worker/postgres"]
sqlite = ["pvlog-storage/sqlite", "pvlog-worker/sqlite"]

[dependencies]
async-trait.workspace = true
axum.workspace = true
blake3.workspace = true
clap.workspace = true
dotenvy.workspace = true
figment.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
pvlog-api = { version = "0.1.0", path = "../api" }
pvlog-application = { version = "0.1.0", path = "../application" }
pvlog-domain = { version = "0.1.0", path = "../domain" }
pvlog-storage = { version = "0.1.0", path = "../storage", default-features = false }
pvlog-worker = { version = "0.1.0", path = "../worker", default-features = false }
reqwest.workspace = true
rust-embed.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true

[[bin]]
name = "pvlog"
path = "src/main.rs"

[[test]]
name = "runtime-smoke"
path = "../../../tests/rust/smoke/runtime_smoke.rs"

[[test]]
name = "request-authorization"
path = "../../../tests/rust/pvlog/request_authorization.rs"

[[test]]
name = "operator-bundle"
path = "../../../tests/rust/pvlog/operator_bundle.rs"

[[test]]
name = "authentication-connector"
path = "../../../tests/rust/pvlog/authentication_connector.rs"

[[test]]
name = "embedded-ui"
path = "../../../tests/rust/pvlog/embedded_ui.rs"

[[test]]
name = "reporting"
path = "../../../tests/rust/pvlog/reporting.rs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
