[package]
name = "pvlog-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["postgres", "sqlite"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
blake3.workspace = true
prost.workspace = true
pvlog-application = { path = "../application" }
pvlog-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zstd.workspace = true

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[test]]
name = "migrations"
path = "../../../tests/rust/storage/migrations.rs"

[[test]]
name = "sqlite-account-provisioning"
path = "../../../tests/rust/storage/sqlite_account_provisioning.rs"

[[test]]
name = "sqlite-account-schema"
path = "../../../tests/rust/storage/sqlite_account_schema.rs"

[[test]]
name = "telemetry-schema"
path = "../../../tests/rust/storage/telemetry_schema.rs"

[[test]]
name = "postgres-schema"
path = "../../../tests/rust/storage/postgres_schema.rs"

[[test]]
name = "sqlite-account-routing"
path = "../../../tests/rust/storage/sqlite_account_routing.rs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
