[package]
name = "pvlog-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["postgres", "sqlite"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
async-trait.workspace = true
blake3.workspace = true
prost.workspace = true
pvlog-application = { path = "../application" }
pvlog-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zstd.workspace = true

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
pvlog-application-fakes = { path = "../../../tests/support/rust/application-fakes" }
secrecy.workspace = true
tempfile.workspace = true

[[test]]
name = "migrations"
path = "../../../tests/rust/storage/migrations.rs"

[[test]]
name = "sqlite-account-provisioning"
path = "../../../tests/rust/storage/sqlite_account_provisioning.rs"

[[test]]
name = "sqlite-account-schema"
path = "../../../tests/rust/storage/sqlite_account_schema.rs"

[[test]]
name = "telemetry-schema"
path = "../../../tests/rust/storage/telemetry_schema.rs"

[[test]]
name = "postgres-schema"
path = "../../../tests/rust/storage/postgres_schema.rs"

[[test]]
name = "sqlite-account-routing"
path = "../../../tests/rust/storage/sqlite_account_routing.rs"

[[test]]
name = "sqlite-projections"
path = "../../../tests/rust/storage/sqlite_projections.rs"

[[test]]
name = "management-repositories"
path = "../../../tests/rust/storage/management_repositories.rs"

[[test]]
name = "account-configuration-repositories"
path = "../../../tests/rust/storage/account_configuration_repositories.rs"

[[test]]
name = "system-lifecycle-repositories"
path = "../../../tests/rust/storage/system_lifecycle_repositories.rs"

[[test]]
name = "external-identity-repositories"
path = "../../../tests/rust/storage/external_identity_repositories.rs"

[[test]]
name = "telemetry-repositories"
path = "../../../tests/rust/storage/telemetry_repositories.rs"

[[test]]
name = "operational-repositories"
path = "../../../tests/rust/storage/operational_repositories.rs"

[[test]]
name = "user-lifecycle-repositories"
path = "../../../tests/rust/storage/user_lifecycle_repositories.rs"

[[test]]
name = "local-password"
path = "../../../tests/rust/storage/local_password.rs"

[[test]]
name = "segment-codec"
path = "../../../tests/rust/storage/segment_codec.rs"

[[test]]
name = "compaction"
path = "../../../tests/rust/storage/compaction.rs"

[[test]]
name = "merged-reader"
path = "../../../tests/rust/storage/merged_reader.rs"

[[test]]
name = "overlay-folding"
path = "../../../tests/rust/storage/overlay_folding.rs"

[[test]]
name = "rollup-builder"
path = "../../../tests/rust/storage/rollup_builder.rs"

[[test]]
name = "summary-rebuild"
path = "../../../tests/rust/storage/summary_rebuild.rs"

[[test]]
name = "integrity-planner"
path = "../../../tests/rust/storage/integrity_planner.rs"

[[test]]
name = "rbac-repositories"
path = "../../../tests/rust/storage/rbac_repositories.rs"

[[test]]
name = "fault-injection"
path = "../../../tests/rust/storage/fault_injection.rs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
