[package]
name = "pvlog-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["postgres", "sqlite"]
postgres = ["pvlog-storage/postgres"]
sqlite = ["pvlog-storage/sqlite"]

[dependencies]
async-trait.workspace = true
blake3.workspace = true
pvlog-application = { version = "0.1.0", path = "../application" }
pvlog-domain = { version = "0.1.0", path = "../domain" }
pvlog-storage = { version = "0.1.0", path = "../storage", default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
sqlx.workspace = true
tempfile.workspace = true

[[test]]
name = "yield-jobs"
path = "../../../tests/rust/worker/yield_jobs.rs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
